--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,7 @@ car:
       power,
       brand
 user:
+  loan.incomeUrl: https://66055cd12ca9478ea1801f2e.mockapi.io/api/users/income
   loan.minimalIncome: 40000
   loan.minCarPrice: 1000000
   loan.valueOfIncomeMonth: 6
